Initialize/yaml/ingress/dashboard-ext.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-dashboard
  namespace: default
spec:
  type: ExternalName
  externalName: kubernetes-dashboard.kube-system.svc.cluster.local
  ports:
  - port: 443
