Initialize/yaml/ingress/portal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - PORTAL_DOMAIN_PLACE_HOLDER
      secretName: tls-secret-portal
  rules:
    - host: PORTAL_DOMAIN_PLACE_HOLDER
      http:
        paths:
          - backend:
              serviceName: portal
              servicePort: 80
            path: /upstream/validate
          - backend:
              serviceName: portal
              servicePort: 80
            path: /
